View Issue Details

IDProjectCategoryView StatusLast Update
0027410CommunityOCCT:Data Exchangepublic2023-09-29 17:55
ReporterFredK Assigned To 
PrioritynormalSeverityminor 
Status assignedResolutionopen 
PlatformWindowsOSVC++ 2015 
Product Version6.9.0 
Summary0027410: Possible resource leak when parsing an invalid IGES file
DescriptionIf an invalid (i.e. non-IGIS) file is being processed by igesread(), it may not close the input FILE* (lefic). This occurs when the initial call to igres_lire() returns -1; in this case, i0 remains 0 and 'if (i0 == 0) return -1;' will be executed without ever closing lefic.
Steps To ReproduceAttempt to load a non-IGES file (for example, some .cpp file) - it will correctly be rejected but the file will remain opened for the duration of the application.
Additional information
and documentation updates
Patch attached to fix the problem.
TagsNo tags attached.
Test case number

Attached Files

  • occ-iges-file-leak-patch.diff (742 bytes)

Activities

FredK

2016-04-21 14:25

reporter  

occ-iges-file-leak-patch.diff (742 bytes)

Timo

2016-04-22 13:58

developer   ~0053501

I also observed this behaviour in 6.9.0.

Issue History

Date Modified Username Field Change
2016-04-21 14:25 FredK New Issue
2016-04-21 14:25 FredK Assigned To => gka
2016-04-21 14:25 FredK File Added: occ-iges-file-leak-patch.diff
2016-04-22 13:58 Timo Note Added: 0053501
2016-06-15 15:47 abv Assigned To gka => ika
2016-06-15 15:47 abv Status new => assigned
2023-09-29 17:55 ika Assigned To ika =>