0027410: Data Exchange, Iges Import - Possible resource leak when parsing an invalid file

fclose() call is added before early return statement in igesread() function.